RESOLVED FIXED276440
WTFEmitSignpost: _STRINGIFY not defined when JOURNALD_LOG is disabled
https://bugs.webkit.org/show_bug.cgi?id=276440
Summary WTFEmitSignpost: _STRINGIFY not defined when JOURNALD_LOG is disabled
Dennis Camera
Reported 2024-07-10 12:41:57 PDT
The _STRINGIFY macro in <wtf/Assertions.h> is defined inside #elif ENABLE(JOURNALD_LOG), but is used by WTFEmitSignpost() also in other conditions. In file included from /tmp/WebKit/Source/WebCore/page/LocalDOMWindow.cpp:141, from /tmp/WebKit/build/WebCore/DerivedSources/unified-sources/UnifiedSource-767013ce-5.cpp:5: /tmp/WebKit/Source/WebCore/page/LocalDOMWindow.cpp: In member function 'void WebCore::LocalDOMWindow::dispatchLoadEvent()': /tmp/WebKit/Source/WebCore/page/LocalDOMWindow.cpp:2323:41: error: 'NavigationAndPaintTiming' was not declared in this scope 2323 | WTFEmitSignpost(document.get(), NavigationAndPaintTiming, "loadEventBegin"); | ^~~~~~~~~~~~~~~~~~~~~~~~ /tmp/WebKit/build/WTF/Headers/wtf/SystemTracing.h:350:57: note: in definition of macro 'WTFEmitSignpost' 350 | annotator->instantMark(std::span(_STRINGIFY(name)), " " __VA_ARGS__); \ | ^~~~ /tmp/WebKit/build/WTF/Headers/wtf/SystemTracing.h:350:46: error: '_STRINGIFY' was not declared in this scope; did you mean 'G_STRINGIFY'? 350 | annotator->instantMark(std::span(_STRINGIFY(name)), " " __VA_ARGS__); \ | ^~~~~~~~~~ /tmp/WebKit/Source/WebCore/page/LocalDOMWindow.cpp:2323:9: note: in expansion of macro 'WTFEmitSignpost' 2323 | WTFEmitSignpost(document.get(), NavigationAndPaintTiming, "loadEventBegin"); | ^~~~~~~~~~~~~~~ /tmp/WebKit/Source/WebCore/page/LocalDOMWindow.cpp:2333:41: error: 'NavigationAndPaintTiming' was not declared in this scope 2333 | WTFEmitSignpost(document.get(), NavigationAndPaintTiming, "loadEventEnd"); | ^~~~~~~~~~~~~~~~~~~~~~~~ /tmp/WebKit/build/WTF/Headers/wtf/SystemTracing.h:350:57: note: in definition of macro 'WTFEmitSignpost' 350 | annotator->instantMark(std::span(_STRINGIFY(name)), " " __VA_ARGS__); \ | ^~~~ /tmp/WebKit/build/WTF/Headers/wtf/SystemTracing.h:350:46: error: '_STRINGIFY' was not declared in this scope; did you mean 'G_STRINGIFY'? 350 | annotator->instantMark(std::span(_STRINGIFY(name)), " " __VA_ARGS__); \ | ^~~~~~~~~~ /tmp/WebKit/Source/WebCore/page/LocalDOMWindow.cpp:2333:9: note: in expansion of macro 'WTFEmitSignpost' 2333 | WTFEmitSignpost(document.get(), NavigationAndPaintTiming, "loadEventEnd"); | ^~~~~~~~~~~~~~~ /tmp/WebKit/Source/WebCore/page/LocalDOMWindow.cpp:2334:40: error: 'NavigationAndPaintTiming' was not declared in this scope 2334 | WTFEndSignpost(document.get(), NavigationAndPaintTiming); | ^~~~~~~~~~~~~~~~~~~~~~~~ /tmp/WebKit/build/WTF/Headers/wtf/SystemTracing.h:362:62: note: in definition of macro 'WTFEndSignpost' 362 | annotator->endMark(pointer, std::span(_STRINGIFY(name)), " " __VA_ARGS__); \ | ^~~~ /tmp/WebKit/build/WTF/Headers/wtf/SystemTracing.h:362:51: error: '_STRINGIFY' was not declared in this scope; did you mean 'G_STRINGIFY'? 362 | annotator->endMark(pointer, std::span(_STRINGIFY(name)), " " __VA_ARGS__); \ | ^~~~~~~~~~ /tmp/WebKit/Source/WebCore/page/LocalDOMWindow.cpp:2334:9: note: in expansion of macro 'WTFEndSignpost' 2334 | WTFEndSignpost(document.get(), NavigationAndPaintTiming); | ^~~~~~~~~~~~~~
Attachments
Dennis Camera
Comment 1 2024-07-11 03:16:19 PDT
EWS
Comment 2 2024-07-11 15:11:41 PDT
Committed 280877@main (f4a28dad0dbe): <https://commits.webkit.org/280877@main> Reviewed commits have been landed. Closing PR #30685 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-11 15:12:15 PDT
Note You need to log in before you can comment on or make changes to this bug.