[WTF] Define _STRINGIFY in all cases https://bugs.webkit.org/show_bug.cgi?id=276440

Reviewed by Fujii Hironori.

The _STRINGIFY macro is also used by ETFEmitSignpost() when
JOURNALD_LOG is not enabled.

* Source/WTF/wtf/Assertions.h: move _STRINGIFY out of #elif ENABLE(JOURNALD_LOG)

Canonical link: https://commits.webkit.org/280877@main